--- a/app/src/main/res/layout/activity_petunjuk_penggunaan.xml
+++ b/app/src/main/res/layout/activity_petunjuk_penggunaan.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_lapor"
+        layout="@layout/app_bar_petunjuk_penggunaan"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_lapor"
-        app:menu="@menu/activity_lapor_drawer" />
+        app:headerLayout="@layout/nav_header_petunjuk_penggunaan"
+        app:menu="@menu/activity_petunjuk_penggunaan_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
